<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CalendarioActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- UID DEL USUARIO -->
        <TextView
            android:id="@+id/Uid_Usuario"
            android:hint="@string/Uid_Usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="sans-serif"/>
        <!-- CORREO DEL USUARIO -->
        <TextView
            android:id="@+id/Correo_usuario"
            android:hint="@string/Correo_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="sans-serif"/>
        <!-- FECHA Y HORA ACTUAL DEL DISPOSITIVO -->
        <TextView
            android:id="@+id/Fecha_hora_actual"
            android:hint="@string/Fecha_hora_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="sans-serif"/>
        <!-- TITULO -->
        <EditText
            android:hint="@string/Titulo"
            android:id="@+id/Titulo"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <!-- DESCRIPCION -->
        <EditText
            android:id="@+id/Descripcion"
            android:hint="@string/Descripcion"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:minHeight="150dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <!-- BOTON PARA ABRIR CALENDARIO -->
            <Button
                android:id="@+id/Btn_Calendario"
                android:text="@string/Btn_Calendario"
                app:icon="@drawable/icono_calendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <!-- VISUALIZAR FECHA ELEGIDA -->
            <TextView
                android:id="@+id/Fecha"
                android:hint="@string/Fecha"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif-black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <!-- ESTADO DE LA NOTA -->
        <TextView
            android:id="@+id/Estado"
            android:hint="@string/Estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"/>
        <!-- BOTON PARA GUARDAR -->
        <Button
            android:id="@+id/Btn_Guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Guardar"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
